--- a/MvcUniversity/.gitignore
+++ b/MvcUniversity/.gitignore
@@ -12,7 +12,9 @@
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
-
+# Ignore SQLite temp files
+*.db-shm
+*.db-wal
 # Mono auto generated files
 mono_crash.*
 
